--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -363,7 +363,31 @@ Similarly, this argument holds if $(K + \lambda I)^{-1}$ exists and $\lambda \ne
 
 d) See figures/plots.
 
-
+\begin{figure}
+    \centering
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{l01.jpg}
+        \caption{$y=x$}
+        \label{fig:y equals x}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{l1.jpg}
+        \caption{$y=3sinx$}
+        \label{fig:three sin x}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{l6.jpg}
+        \caption{$y=5/x$}
+        \label{fig:five over x}
+    \end{subfigure}
+    \caption{Three simple graphs}
+    \label{fig:three graphs}
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Problem 4}
