--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -328,6 +328,17 @@ Therefore, converse holds true as well, as long as $K$ K is invertible. \\
 
 b) See figures/plots.
 
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{3b.jpg}
+\caption{\label{fig:errors} Number iterations (contractive map was ran) vs the avg. errors. Upper (green) curve is test error and the lower(blue) curve is training error.}
+\end{figure}
+
+My toy dataset was pest 1 data. Sigma was the average distance between points 0.528 as instructed on the question. Similarly, the test set sigma was for test set was 0.533.
+
+From my plot it is clear that early stopping at around 6 or 7 iterations can achieve a better generalization error, because, its where the error for the test set is the lowest and also, where the training error is not to low (but neither to high that overfitting has occurred).
+
+
 c) \begin{proof}
 First, let's show that if $c_{\lambda}^* = T(c_{\lambda}^*)$  then it minimizes the Tiknhonov regularization.
 If $ c^* = T(c^*) $ 
@@ -481,16 +492,6 @@ Yielding the desired upper bound.
 %%%
 
 b)
-
-\begin{figure}
-\centering
-\includegraphics[width=0.7\textwidth]{plot_3b.jpg}
-\caption{\label{fig:errors} Number iterations (contractive map was ran) vs the avg. errors. Upper (green) curve is test error and the lower(blue) curve is training error.}
-\end{figure}
-
-My toy dataset was pest 1 data. Sigma was the average distance between points 0.528 as instructed on the question. Similarly, the test set sigma was for test set was 0.533.
-
-From my plot it is clear that early stopping at around 6 or 7 iterations can achieve a better generalization error, because, its where the error for the test set is the lowest and also, where the training error is not to low (but neither to high that overfitting has occurred).
 
 %%%
 
