--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -379,25 +379,25 @@ d) See figures/plots.
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{l01.jpg}
-        \caption{$y=x$}
+        \caption{$\lambda = 0.1$}
         \label{fig:y equals x}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{l1.jpg}
-        \caption{$y=3sinx$}
+        \caption{$\lambda = 1$}
         \label{fig:three sin x}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{l6.jpg}
-        \caption{$y=5/x$}
+        \caption{$\lambda = 6$}
         \label{fig:five over x}
     \end{subfigure}
-    \caption{Three simple graphs}
-    \label{fig:three graphs}
+    \caption{Comparing three values of lambda and iterations.}
+    \label{fig:3d}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
