--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -462,47 +462,24 @@ $$I[f_s] - I_s[f_s] \leq \epsilon(n, \eta, N) \implies I[f_s] \leq I_s[f_s] + \e
 
 As $N = |\mathcal{H}|$ increases, then that means the we are increasing the space of functions we are allowing ourselves to choose from. Since we are adding more functions to choose from without removing previous functions we already had in $\mathcal{H}$, the empirical risk cannot increase. If this is true, then the empirical risk can only decrease. This means that $I_S[f_S]$ can only decrease as $N$ increases. So we might get a lower empirical risk. 
 
-However, as N increases, $\epsilon(n, \eta, N)$ increases wrt to the growth of  the square root of N . Meaning that our difference between empirical and generalization error becomes more lose, in the sense that the upper bound increases. This is not good because if N becomes very large, then the event that we are trying to impose a probability, will become less and less interesting. To illustrate my argument, take as an extreme case, if $\epsilon(n, \eta, N) = \infty$, then we are trying to impose an upper bound on the probability that the empirical risk is really far from the generalization. However, if we allow the difference to be infinity, then it becomes an uninteresting probabilistic event, even if we know the probability exactly. i.e. we know for sure that their difference will be less than infinity if both are finite real numbers.
+However, as N increases, $\epsilon(n, \eta, N)$ increases wrt to the growth of  the square root of N . Meaning that our difference between empirical and generalization error becomes more lose, in the sense that the upper bound increases wrt to $\epsilon(n, \eta, N)$. This is not good because if N becomes very large, then the event that we are trying to impose a probability, will become less and less interesting.
 
-Now lets explore the sum of them $I_S[f_S] + \epsilon(n, \eta, N)$. As N increases $I_S[f_S]$ can only decrease and $\epsilon(n, \eta, N)$ increases for sure. However, $I_S[f_S]$ doesn't necessarily have to decrease for every unit of N that we increase, while $\epsilon(n, \eta, N)$ for sure increases for every unit of N. This makes overfitting more likely. As N increases $I_S[f_S]$ \textbf{might} decrease, however, we know for sure that $\epsilon(n, \eta, N)$ increases. This gives us an upper bound on $I[f_S]$ (generalization error) that increases most of the times as $N$ increases. This means that our upper bound estimate for the generalization error becomes more and more useless and that the empirical error becomes less good as a proxy for $I[f_S]$. Thus, yielding overfitting more and more likely.
+Now lets explore the sum of them $I_S[f_S] + \epsilon(n, \eta, N)$. As N increases $I_S[f_S]$ can only decrease, however, $\epsilon(n, \eta, N)$ increases for sure. If $I_S[f_S]$ doesn't necessarily have to decrease for every unit of N that we increase, but $\epsilon(n, \eta, N)$ is guaranteed to increases for every unit of N, then this makes overfitting more likely and makes the generalization bound we had less useful. The bound has a high chance of increasing, so if it increases, then it means our generalization might be worse than we thought.
+Overfitting might occur because generalization upper bound gets worse but we could be tricked by seeing empirical risk decreases at times.
 
-4c)
+4c)If we want with $1 - \eta$ confidence that the generalization and empirical error are close, then from ideas explained in part b the following equations are true:
 
-\begin{proof}
+$$ I[f_s] - I_s[f_s] | \leq \epsilon(n, \eta, N) \land | I[f^*] - I_s[f^*] | \leq \epsilon(n, \eta, N)$$
 
-If we want with $1 - \eta$ confidence that the generalization and empirical error are close, then from ideas explained in part b the following equation holds:
-
-$$ | I[f_s] - I_s[f_s] | \leq \epsilon(n, \eta, N)$$
-
-and
-
-$$ | I[f^*] - I_s[f^*] | \leq \epsilon(n, \eta, N)$$
-
-Therefore we know that:
-
-$$ I[f_s] - I_s[f_s] \leq \epsilon(n, \eta, N)$$
-
-and
-
-$$ I_S[f^*] - I[f^*] \leq \epsilon(n, \eta, N)$$
+$$ I[f_s] - I_s[f_s] \leq \epsilon(n, \eta, N) \land I_S[f^*] - I[f^*] \leq \epsilon(n, \eta, N)$$
 
 Add the above two inequalities:
 
 $$I[f_s] - I_s[f_s] +  I_s[f^*] - I[f^*] = (I[f_s] - I[f^*]) + (I_S[f^*] - I_s[f_s])  \leq 2\epsilon(n, \eta, N)$$
 
-The second expression in brackets is greater than or equal to zero i.e. $I_s[f^*] - I_s[f_s] \geq 0$. This is because $f_s$ is chosen such that it minimizes the empirical risk. Therefore, there cannot be any function that achieves a lower empirical risk that the minimizer of the empirical risk. Therefore:
-
- $$I_S[f^*] \geq I_s[f_s] \implies I_S[f^*] - I_s[f_s] \geq 0$$
+The second expression in brackets is greater than or equal to zero i.e. $I_s[f^*] - I_s[f_s] \geq 0$. This is because $f_s$ is chosen such that it minimizes the empirical risk. Therefore, there cannot be any function that achieves a lower empirical risk that the minimizer of the empirical risk: $I_S[f^*] \geq I_s[f_s] \implies I_S[f^*] - I_s[f_s] \geq 0$ 
  
- Therefore we know that $I[f_s] - I_s[f_s] \leq (I[f_s] - I[f^*]) + (I_s[f^*] - I_s[f_s]) $. Therefore implying that 
- 
- $$I[f_s] - I[f^*] \leq (I[f_s] - I[f^*]) + (I_S[f^*] - I_s[f_s])  \leq 2\epsilon(n, \eta, N)$$
- 
-  $$I[f_s] - I[f^*] \leq 2\epsilon(n, \eta, N)$$
- 
- As required.
-
-\end{proof}
+ $$I[f_s] - I[f^*] \leq (I[f_s] - I[f^*]) + (I_S[f^*] - I_s[f_s])  \leq 2\epsilon(n, \eta, N) \implies I[f_s] - I[f^*] \leq 2\epsilon(n, \eta, N)$$
 
 %%%
 \paragraph{Problem 5 (MATLAB)}
