--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -485,7 +485,8 @@ The second expression in brackets is greater than or equal to zero i.e. $I_s[f^*
 \paragraph{Problem 5 (MATLAB)}
 a) Code
 b)Code
-C) When we plotted the accuracy on the unlabeled data against n (the number of labeled data) we could see that as n got large, Laplacian and RLS had similar accuracy. However, for smaller values of n, Laplacian had a clear advantage because it was able to incorporate information about the geometric structure of the unlabeled data when. Therefore, when it came around to predict, it had an advantage, because it had information that regular RLS tikhonov had no way of obtaining.
+C) When we plotted the accuracy on the unlabeled data against n (the number of labeled data) we could see that as n got large, Laplacian and RLS had similar accuracy. However, for smaller values of n, Laplacian had a clear advantage because it was able to incorporate information about the geometric structure of the unlabeled data when. Therefore, when it came around to predict, it had an advantage, because it had information that regular RLS tikhonov had no way of obtaining. 
+Obviously, this method is only likely to do well if the assumption that the manifold and geometric structure of the data is some how related to the hidden labels that we are trying to learn.
 
 \end{document}
 
